fix visibility

--- a/styles/cardUser.module.scss
+++ b/styles/cardUser.module.scss
@@ -3,6 +3,7 @@
   justify-content: space-around;
   margin-top: 4%;
   padding: 0px 10%;
+  background: #fff;
   div {
     display: flex;
     flex-direction: column;
