--- a/styles/headSection.module.scss
+++ b/styles/headSection.module.scss
@@ -40,7 +40,7 @@
   font-style: normal;
   line-height: 56px;
   position: relative;
-  height: 460px;
+  height: 560px;
   p {
     font-weight: 700;
     font-size: 40px;
@@ -55,6 +55,9 @@
     letter-spacing: 0.75px;
     color: #4e4b66;
     font-family: Poppins;
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 25%;
+    backdrop-filter: blur(1px);
   }
   button {
     font-family: Poppins;
@@ -68,10 +71,12 @@
     cursor: pointer;
   }
   div:nth-child(1) {
+    padding-top: 5%;
     z-index: -2;
     width: 100%;
-    position: absolute;
+    position: fixed;
     display: flex;
+    justify-content: space-between;
     height: -webkit-fill-available;
     background: rgba(242, 247, 255, 0.7);
     img {
@@ -97,6 +102,9 @@
   .header {
     padding: 1rem 2%;
   }
+  .initialLegent {
+    height: 460px;
+  }
 }
 
 @media screen and (max-width: 470px) {
@@ -105,5 +113,12 @@
       display: none;
     }
   }
- 
+  .initialLegent {
+    height: 460px;
+    div:nth-child(1) {
+      svg:nth-child(1){
+        display: none;
+      }
+    }
+  }
 }
