--- a/styles/posterPublicity.scss
+++ b/styles/posterPublicity.scss
@@ -69,6 +69,87 @@
   }
 }
 
+input[type="range"] {
+  -webkit-appearance: none;
+  width: 100%;
+  background: transparent;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+
+input[type="range"]:focus {
+  outline: none;
+}
+
+input[type="range"]::-ms-track {
+  width: 100%;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 2px solid #ff0282;
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  background: #ffffff;
+  cursor: pointer;
+  margin-top: -7px;
+  box-shadow: 0px 0px 3px 2px #df90b8;
+}
+
+input[type="range"]::-moz-range-thumb {
+  box-shadow: 0px 0px 3px 2px #df90b8;
+  border: 2px solid #ff0282;
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  background: #ffffff;
+  cursor: pointer;
+}
+
+input[type="range"]::-ms-thumb {
+  box-shadow: 0px 0px 3px 2px #df90b8;
+  border: 2px solid #ff0282;
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  background: #ffffff;
+  cursor: pointer;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 5px;
+  cursor: pointer;
+  background: #ff0282;
+  border-radius: 10%;
+  border: 0.2px solid #ff0282;
+}
+
+input[type="range"]::-moz-range-track {
+  width: 100%;
+  height: 5px;
+  cursor: pointer;
+  background: #ff0282;
+  border-radius: 10%;
+  border: 0.2px solid #ff0282;
+}
+
+input[type="range"]::-ms-track {
+  width: 100%;
+  height: 5px;
+  cursor: pointer;
+  background: #ff0282;
+  border-radius: 10%;
+  border: 0.2px solid #ff0282;
+}
+
 @media screen and (max-width: 970px) {
   .section-poster-register {
     padding: 4em 1em;
@@ -96,9 +177,8 @@
   .footer-links {
     display: none;
   }
-  .social-media{
+  .social-media {
     display: none;
-
   }
 
   .section-poster-register {
